# pt-dec

./: pyproject.toml
examples/mnist/: mnist.py
ptdec/: cluster.py  model.py  utils.py
ptsdae/: dae.py  model.py  sdae.py  sklearn_api.py  utils.py
tests/: test_cluster.py  test_dec.py  test_model.py  test_utils.py
tests_ptsdae/: test_model.py  test_sdae.py  test_sklearn_api.py  test_utils.py
