[tool.poetry]
name = "pt-dec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.21.5"
scipy = "^1.7.3"
torch = "^1.10.1"
pandas = "^1.3.5"
click = "^8.0.3"
visdom = "^0.1.8"
tqdm = "^4.62.3"
torchvision = "^0.11.2"
scikit-learn = ">=0.19.1"
seaborn = "^0.11.2"
tensorboardX = "^2.4.1"
cytoolz = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true