[tool.poetry]
name = "pt-dec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
packages = [
    { include = "ptdec"},
    { include = "ptsdae"}
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.21.5"
scipy = "^1.7.3"
torch = "^1.10.1"
pandas = ">=1.3.5"
click = "^8.0.3"
visdom = "^0.1.8"
tqdm = "^4.62.3"
torchvision = "*"
scikit-learn = ">=0.19.1"
seaborn = "*"
cytoolz = "*"
tensorboard = "^2.7.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true